chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idcardgenerator
spec:
  selector:
    app: idcardgenerator
  ports:
    - port: 8080
  type: ClusterIP
