chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idcardgenerator
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/force-hsts: "true"
    traefik.ingress.kubernetes.io/hsts-max-age: "315360000"
    traefik.ingress.kubernetes.io/hsts-include-subdomains: "true"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    traefik.ingress.kubernetes.io/custom-request-headers: "X-Forwarded-Prefix: /perso"
    traefik.ingress.kubernetes.io/frontend-entry-points: "http,https"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"

spec:
  tls:
    - hosts:
        - gphrase.de
      secretName: gphrase-cert-secret
  rules:
    - host: gphrase.de
      http:
        paths:
          - path: /perso
            pathType: Prefix
            backend:
              service:
                name: idcardgenerator
                port:
                  number: 8080
